--- a/style.css
+++ b/style.css
@@ -1,27 +1,62 @@
 /* if screen is equal to or smaller than 767 px, which is supposedly mobile size for this lab */
 @media screen and (max-width: 767px) {
   body {
-    background: blue;
+    /* background: blue; */
     width: 767px;
+    /* background: red; */
+    float: left;
+    margin: 100px;
   }
   h1 {
-    border:
-    width: 100%;
+    border: 1px solid black;
+    width: 62.5815%;
+    height: 75px;
+    /* background: orange; */
   }  
   main {
-    width: 100%;
+    /* border: 1px solid black; */
+     width: 767px;
+    /* height: ; */
+    /* background: yellow; */
+    
   }
   aside {
-    width: 100%;
+    border: 1px solid black;
+     width: 62.5815%;
+    height: 150px;
+    /* background: green; */
   }
   section {
-    width: 100%;
+    border: 1px solid black;
+    width: 62.5815%;
+    height: 125px;
+    /* background: blue; */
   }
   ul {
-    width: 100%;
+    /* border: 1px solid black; */
+    width: 500px;
+    height: 504px;
+    /* background: purple; */
   }
   li {
-    width: 100%;
+    /* margin: 1px; */
+    border: 1px solid black;
+    width: 47.75%;
+    height: 250px;
+    /* display: inline-block; */
+    float: left;
+    /* background: pink; */
+  }
+
+  /* div {
+    clear: both;
+  } */
+
+  p {
+    border: 1px solid black;
+    width: 480px;
+    height: 80px;
+    /* background: rgb(7, 201, 191); */
   }
 
 }
