--- a/style.css
+++ b/style.css
@@ -7,29 +7,36 @@
     float: left;
     margin: 100px;
   }
+  /* a */
   h1 {
     border: 1px solid black;
     width: 62.5815%;
     height: 75px;
+    /* padding: 31%; */
     /* background: orange; */
+    text-align: center;
+    /* vertical-align: middle; */
   }  
   main {
     /* border: 1px solid black; */
      width: 767px;
     /* height: ; */
     /* background: yellow; */
-    
   }
+/* b */
   aside {
     border: 1px solid black;
      width: 62.5815%;
     height: 150px;
+    text-align: center;
     /* background: green; */
   }
+  /* c d */
   section {
     border: 1px solid black;
     width: 62.5815%;
     height: 125px;
+    text-align: center;
     /* background: blue; */
   }
   ul {
@@ -38,6 +45,7 @@
     height: 504px;
     /* background: purple; */
   }
+  /* e f g h */
   li {
     /* margin: 1px; */
     border: 1px solid black;
@@ -45,17 +53,19 @@
     height: 250px;
     /* display: inline-block; */
     float: left;
+    text-align: center;
     /* background: pink; */
   }
 
   /* div {
     clear: both;
   } */
-
+/* i */
   p {
     border: 1px solid black;
     width: 480px;
     height: 80px;
+    text-align: center;
     /* background: rgb(7, 201, 191); */
   }
 
@@ -64,6 +74,87 @@
 /* if screen is equal to or larger than 768 px, which is supposedly mobile size for this lab, therefore we're on desktop */
 @media screen and (min-width: 768px) {
   body {
+    /* background: purple; */
+    width: 960px;
+    float: left;
+    margin: auto;
+    /* background: red; */
+  }
+  /* a */
+  h1 {
+    width: 960px;
+    height: 100px;
+    border: 1px solid black;
+    /* background: orange; */
+  }  
+
+  main {
+    border: 1px solid black;
+    width: 960px;
+    height: 610px;
+    /* background: yellow; */
+    /* float: left; */
+    /* clear: right; */
+    /* display: inline-block; */
+  }
+  /* b */
+  aside {
+    border: 1px solid black;
+    width: 190px;
+    height: 600px;
+    /* background: green; */
+    float: left;
+  }
+
+  #cdefghi {
+    width: 766px;
+    height: 600px;
+    /* background: rgb(13, 192, 177); */
+    float: right;
+
+  }
+  /* c d  */
+  /* div {
+    width: 750px;
+    height: 600px;
+    /* float: left; 
+  } */
+  /* #cd {
+    width: 766px;
+    height: 205px;
+    float: left;
+  } */
+  section {
+    border: 1px solid black;
+    width: 380px;
+    height: 200px;
+    background: blue;
+    float: right;
+  }
+  ul {
+    width: 960px;
+    height: 255px;
+    border: 1px solid black;
     background: purple;
+    /* display: inline-block; */
+  }
+  /* e f g h  */
+  li {
+    border: 1px solid black;
+    width: 190px;
+    height: 250px;
+    background: pink;
+    /* display: inline-block; */
+    float: right;
+  }
+/* i */
+  p {
+    border: 1px solid black;
+    width: 760px;
+    height: 150px;
+    background: gray;
+  }
+  cleardiv{
+    clear: both;
   }
 }
